[package]
name = "ssd1306-hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embedded-graphics = "0.8.1"
panic-probe = { version = "0.3.1", features = ["defmt"] }
ssd1306 = "0.8.4"


[dependencies.stm32f3xx-hal]
version = "0.10.0"
features = ["stm32f303x8", "defmt", ]



# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
